<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:minWidth="250dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/dialogFoodText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_name_hint"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:maxLength="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorie"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/dialogCalorieText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/calorie_hint"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:maxLength="7"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogDoneButton"
        android:text="@string/done"
        android:onClick="onClick"/>

</LinearLayout>